--- a/tasks/templates/tasks/home.html
+++ b/tasks/templates/tasks/home.html
@@ -6,6 +6,6 @@
 {% block content %}
 <div class="background_box">
     <span>Hello, {{request.user}} </span>
-    <span><a href="{% url 'logout' %"> Logout</a></span>
+    <span><a href="{% url 'logout' %}"> Logout</a></span>
 </div>
 {% endblock %}
