--- a/tasks/templates/tasks/task_details.html
+++ b/tasks/templates/tasks/task_details.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block css_style%}
-    <link rel="stylesheet" href="{% static 'tasks/home.css' %}">
+    <link rel="stylesheet" href="{% static 'tasks/task_details.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 {% endblock %}
 
@@ -18,19 +18,7 @@
     </nav>
     <div class="background_box">
 
-        <table>
-            <tr>
-                <th>Your's tasks</th>
-            </tr>
-            {% for task in tasks %}
-            <tr>
-                <td>{{task.title}}</td>
-                <td><a href="{% url 'task_details' task.id %}">  {{task.id}}</a></td>>
-            </tr>
-            {% empty %}
-                <h3>No have not added any task yet</h3>
-            {% endfor %}
-        </table>
+    <h1>Title: {{task.title}}</h1>
 
     </div>
 {% endblock %}
