--- a/tasks/templates/tasks/delete_task.html
+++ b/tasks/templates/tasks/delete_task.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block css_style%}
-    <link rel="stylesheet" href="{% static 'tasks/home.css' %}">
+    <link rel="stylesheet" href="{% static 'tasks/delete_task.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 {% endblock %}
 
@@ -18,23 +18,11 @@
     </nav>
     <div class="background_box">
 
-        <table>
-            <tr>
-                <th>Your's tasks</th>
-                <th></th>
-                <th></th>
-            </tr>
-            {% for task in tasks %}
-            <tr>
-                <td>{{task.title}}</td>
-                <td><a href="{% url 'task_details' task.id %}">  Details</a></td>
-                <td><a href="{% url 'update_task' task.id %}"> Update</a></td>
-                <td><a href="{% url 'delete_task' task.id %}"> Delete</a></td>
-            </tr>
-            {% empty %}
-                <h3>No have not added any task yet</h3>
-            {% endfor %}
-        </table>
+        <form method="POST">
+            {% csrf_token %}
+            <p>Are you sure? {{task}} will be deilted.</p>
+            <input type="submit" value="Delite">
+        </form>
 
     </div>
 {% endblock %}
