--- a/tasks/templates/tasks/delete_task.html
+++ b/tasks/templates/tasks/delete_task.html
@@ -20,8 +20,8 @@
 
         <form method="POST">
             {% csrf_token %}
-            <p>Are you sure? {{task}} will be deilted.</p>
-            <input type="submit" value="Delite">
+            <p>Are you sure? {{task}} will be deleted.</p>
+            <input type="submit" value="Delete">
         </form>
 
     </div>
