--- a/tasks/templates/tasks/register.html
+++ b/tasks/templates/tasks/register.html
@@ -25,7 +25,7 @@
             {{form.errors}}
         </form>
         <div class="login_conteiner">
-            <p>Already have an account</p>
+            <p>Already have an account?</p>
             <a href="{%url 'login_page'%}">Login</a>
         </div>
     </div>
