--- a/tasks/static/tasks/register.css
+++ b/tasks/static/tasks/register.css
@@ -1,5 +1,5 @@
 .background_box {
-    background: #E3D5CA;
+    background: #F7FFE5;
     height:100vh;
     display: flex;
     align-items: center;
@@ -7,48 +7,54 @@
 }
 
 .container {
-    margin: auto;
-    width: 50%;
-    padding: 20px;
-    background-color: #F5EBE0;
-    border-radius: 5px;
-    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5);
+    background: #E1ECC8;
+    width: 20%;
+    height: auto;
+    text-align: center;
+    box-shadow: 8px 8px 24px 16px #C4D7B2;
+    border-radius:10px;
+    margin: 20px;
 }
 
-form h2 {
-    margin-top: 0;
-}
 
 .form-group {
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 5px;
 }
 
-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
 
 .form-group label {
-    margin-bottom: 5px;
+    padding: 10px 0;
+    font-size: 20px;
 }
 
+input {
+    padding: 0.25em 0.5em;
+    background-color: #F7FFE5;
+    border-radius: 4px;
+    resize: vertical;
+    font-size: 20px;
+    width: 60%;
+    text-align: center;
+}
 
 button[type="submit"] {
-    background-color: #D5BDAF;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    font-size: 16px;
-    border-radius: 5px;
-    cursor: pointer;
-    color: black;
+    width:200px;
+    padding:20px;
+    font-family: 'Nanum Gothic', sans-serif;
+    border-radius:10px;
+    background-color: #F7FFE5;
+    font-size: 20px;
 }
 
 .login_conteiner {
     align-items: center;
     text-align: center;
+    font-size: 20px;
+    padding: 5% 0;
 }
 
