--- a/tasks/static/tasks/tasks.css
+++ b/tasks/static/tasks/tasks.css
@@ -1,5 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Ysabeau+Infant:wght@200&display=swap');
 .background_box {
-    background: #E3D5CA;
+    background: #F7FFE5;
     height:100vh;
     display: flex;
     align-items: center;
@@ -7,30 +8,24 @@
 }
 
 .welcome_box {
-    background: #F5EBE0;
-    width: 40%;
+    background: #E1ECC8;
+    width: 20%;
     height: auto;
     text-align: center;
-    box-shadow: 8px 8px 24px 16px rgba(66, 68, 90, 1);
-    font-family: 'Comfortaa', cursive;
+    box-shadow: 8px 8px 24px 16px #C4D7B2;
+    border-radius:10px;
+    margin: 10px;
 }
 
-.login_button {
-  background-color: #F5EBE0;
-  border: none;
-  color: black;
-  padding: 16px 32px;
-  text-decoration: none;
-  margin: 4px 2px;
-  cursor: pointer;
+input[type=submit] {
+    width:200px;
+    padding:20px;
+    font-family: 'Nanum Gothic', sans-serif;
+    border-radius:10px;
+    background-color: #F7FFE5;
+    font-size: 20px;
 }
 
-.register_button {
-  background-color: #F5EBE0;
-  border: none;
-  color: black;
-  padding: 16px 32px;
-  text-decoration: none;
-  margin: 4px 2px;
-  cursor: pointer;
+form {
+    padding: 20px;
 }
