--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,9 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="{% static 'global_styles.css' %}">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Ysabeau+Infant:wght@200&display=swap" rel="stylesheet">
         {% block css_style%}{% endblock %}
         <title>{% block page_title %}Tasks{% endblock %}</title>
     </head>
