--- a/tasks/static/tasks/register.css
+++ b/tasks/static/tasks/register.css
@@ -1,19 +1,7 @@
-.background_box {
-    background: #F7FFE5;
-    height:100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.container {
-    background: #E1ECC8;
-    width: 20%;
+.register-container {
     height: auto;
     text-align: center;
-    box-shadow: 8px 8px 24px 16px #C4D7B2;
-    border-radius:10px;
-    margin: 20px;
+    padding: 25px 50px 25px 50px;
 }
 
 
