--- a/tasks/templates/tasks/register.html
+++ b/tasks/templates/tasks/register.html
@@ -3,9 +3,10 @@
 
 {% block css_style%}<link rel="stylesheet" href="{% static 'tasks/register.css' %}">{% endblock %}
 {% block title%}Register{% endblock %}
+{% block navbar%}{% endblock %}
 {% block content%}
-<div class="background_box">
-    <div class="container">
+
+    <div class="register-container">
         <form method="POST">
             {% csrf_token %}
             <h2>Register</h2>
@@ -29,5 +30,5 @@
             <a href="{%url 'login_page'%}">Login</a>
         </div>
     </div>
-</div>
+
 {% endblock %}
