--- a/tasks/templates/tasks/home.html
+++ b/tasks/templates/tasks/home.html
@@ -8,37 +8,31 @@
 
 {% block title%}Home{% endblock %}
 {% block content %}
-    <nav class="navbar navbar-dark bg-secondary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home_page' %}">ToDoList</a>
-            <span style="color: white">Hello, {{request.user}} </span>
-            <span ><a style="color: white" href="{% url 'add_task' %}"> Add Task</a></span>
-            <span ><a style="color: white" href="{% url 'logout' %}"> Logout</a></span>
+    <div class="task-header">
+        <h3>To Do List</h3>
+        <h4>You have <i>{{count}}</i> incomplete task{{ count|pluralize:"s" }}</h4>
+        <hr>
+    </div>
+
+
+    <div class="tasks-container">
+    {% for task in tasks%}
+        <div class="task-wrapper">
+            {% if task.completed %}
+                <div class="task-title">
+                    <div class="task-complete-icon"></div>
+                    <i><s><a href="{% url 'update_task' task.id %}">{{task}}</a></s></i>
+                </div>
+
+            {% else %}
+                <div class="task-title">
+                    <div class="task-complete-icon"></div>
+                    <a href="{% url 'update_task' task.id %}">{{task}}</a>
+                </div>
+            {% endif %}
         </div>
-    </nav>
-    <div class="background_box">
-        <div class="tasks-table">
-            <table>
-                <form method="GET">
-                <input type="text" name="search-area" value="{{search_input}}">
-                <input type="submit" value="Search">
-                </form>
-                <tr>
-                    <th>Your's tasks</th>
-                    <th></th>
-                    <th></th>
-                </tr>
-                {% for task in tasks %}
-                <tr>
-                    <td>{{task.title}}</td>
-                    <td><a href="{% url 'task_details' task.id %}">  Details</a></td>
-                    <td><a href="{% url 'update_task' task.id %}"> Update</a></td>
-                    <td><a href="{% url 'delete_task' task.id %}"> Delete</a></td>
-                </tr>
-                {% empty %}
-                    <h3>No have not added any task yet</h3>
-                {% endfor %}
-            </table>
-        </div>
+    {% empty %}
+        <h3>You dose not have any task added yet</h3>
+    {% endfor %}
     </div>
 {% endblock %}
