--- a/tasks/templates/tasks/login.html
+++ b/tasks/templates/tasks/login.html
@@ -3,19 +3,20 @@
 
 {% block css_style%}<link rel="stylesheet" href="{% static 'tasks/login.css' %}">{% endblock %}
 {% block title%}Register{% endblock %}
+{% block navbar%}{% endblock %}
 {% block content%}
-<div class="background_box">
-    <div class="container">
+
+    <div class="login-container">
         <form method="POST">
             {% csrf_token %}
             <h2>Login</h2>
             <div class="form-group">
                 <label>Username:</label>
-                <input type="text" name="username" placeholder="Type in your username">
+                <input type="text" name="username" placeholder="">
             </div>
             <div class="form-group">
                 <label>Password:</label>
-                <input type="password" name="password" placeholder="Type in your password">
+                <input type="password" name="password" placeholder="">
             </div>
             <button type="submit">Login</button>
         </form>
@@ -27,5 +28,5 @@
             <a href="{%url 'register_page'%}">Register</a>
         </div>
     </div>
-</div>
+
 {% endblock %}
