--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,42 @@
         <title>{% block page_title %}Tasks{% endblock %}</title>
     </head>
     <body>
-        {% block content %}Challenges{% endblock %}
+        {% block navbar %}
+        <nav class="navbar navbar-expand-lg" style="background-color: #7895CB;">
+            <div class="container-fluid" style="font-family: 'Nanum Gothic', sans-serif;">
+              <a class="navbar-brand">
+                <img src="{% static 'tasks/images/todolist-logo.svg' %}" width="30" height="24">
+                  ToDoList
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'home_page' %}">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'add_task' %}">Add Task</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logout' %}"> Logout</a>
+                  </li>
+                </ul>
+                  <h4 class="navbar-text">
+                    Hello, {{request.user|title}}
+                  </h4>
+              </div>
+            </div>
+        </nav>
+        {% endblock %}
+
+        <div class="background-box">
+            <div class="container">
+                {% block content %}
+                {% endblock %}
+            </div>
+        </div>
+
     </body>
 </html>
