--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         {% block navbar %}
-        <nav class="navbar navbar-expand-lg" style="background-color: #7895CB;">
+        <nav class="navbar navbar-expand-lg" style="background-color: #E1ECC8;">
             <div class="container-fluid" style="font-family: 'Nanum Gothic', sans-serif;">
               <a class="navbar-brand">
                 <img src="{% static 'tasks/images/todolist-logo.svg' %}" width="30" height="24">
