--- a/static/global_styles.css
+++ b/static/global_styles.css
@@ -10,6 +10,7 @@ body {
     background: #E1ECC8;
     box-shadow: 8px 8px 24px 16px #C4D7B2;
     border-radius:10px;
+    padding: 10px;
 }
 
 .background-box {
@@ -19,3 +20,4 @@ body {
     align-items: center;
     justify-content: center;
 }
+
