--- a/tasks/templates/tasks/delete_task.html
+++ b/tasks/templates/tasks/delete_task.html
@@ -12,7 +12,7 @@
 
         <form method="POST">
             {% csrf_token %}
-            <p>Are you sure? {{task}} will be deleted.</p>
+            <h3>Are you sure? {{task}} will be deleted.</h3>
             <input type="submit" value="Delete">
         </form>
 
