--- a/tasks/static/tasks/home.css
+++ b/tasks/static/tasks/home.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Ysabeau+Infant:wght@200&display=swap');
 
-
-
 .task-header {
         justify-content: space-between;
         padding: 10px;
@@ -40,10 +38,23 @@ input {
     border-radius: 4px;
     resize: vertical;
     font-size: 20px;
-    width: 30%;
     text-align: center;
 }
 
 .task-header hr {
     border-top: 1px solid rgb(82, 109, 130);
+}
+
+.add-task-option {
+    line-height: 0;
+    text-decoration: none;
+    font-size: 30px;
+    padding-right: 7px;
+
+}
+
+.search-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
