--- a/tasks/templates/tasks/home.html
+++ b/tasks/templates/tasks/home.html
@@ -17,6 +17,7 @@
                 <input type="text" name="search-area" value="{{search_input}}">
                 <input type="submit" value="Search">
             </form>
+            <a class="add-task-option" href="{% url 'add_task'%}">&#10009;</a>
         </div>
     </div>
 
