--- a/tasks/templates/tasks/home.html
+++ b/tasks/templates/tasks/home.html
@@ -10,7 +10,7 @@
 {% block content %}
     <div class="task-header">
         <h3>To Do List</h3>
-        <h4>You have <i>{{count}}</i> incomplete task{{ count|pluralize:"s" }}</h4>
+        <h4>You have {{count}} incomplete task{{ count|pluralize:"s" }}</h4>
 
         <div class="search-bar">
             <form method="GET">
